# fobos-sdr

./: CMakeLists.txt  README.md  fobos-sdr.rules
recorder/: main.c
